@@ -1,20 +1,9 @@
 AUX qt-4.5-nolibx11.diff 1167 RMD160 da983a70bd436d35e325203dfe9390b2aee925ae SHA1 ee916596e422e91179458778b013fb103dc97cac SHA256 c6c686c1cfc07caefafe697eb8b02b6806f3845f20d3fd3839301d8a94259b0b
 AUX qt-4.5.3-glib-event-loop.patch 770 RMD160 0b854962f1b46958e8b969f949fe5e0d6e66b5ff SHA1 26543a05f894678fd1357d7b0fca217dac6b1a0c SHA256 83f010690d3a7220f5bd559b2aa82d9135d31a2c04bf9d6b12ed78a2dd3da6bb
-DIST qt-everywhere-opensource-src-4.6.0-beta1.tar.gz 154892235 RMD160 aa3df8dc0ea601f73abe624f376cf3df032d77d1 SHA1 ab3898f0d7307decbce03a6fc6829218bba17311 SHA256 033bdd4bc1d371ea21b03098a8276d957ecc535725fa1122d17220d47f15e9ee
-DIST qt-mac-opensource-src-4.4.2.tar.bz2 100715282 RMD160 6c92c2d745ca75fc9779f360825a48c29689ff61 SHA1 217e2d4f80d1c6d68d6bdfe8c757b2bfee929421 SHA256 1191d87e55a718a6cd2d20c2cf43f93ca98de5aebfa49152ef2551ee36914e56
-DIST qt-mac-opensource-src-4.5.1.tar.bz2 112558395 RMD160 eaab3d822c5a752c800e4b654cf45ef0b4b18f81 SHA1 c658aa96b715b5242d415d8b05eb81968dfaea67 SHA256 5bdfe81e0955614827550a19856c5e97af7586e06474a602ae66640fad000116
-DIST qt-mac-opensource-src-4.5.2.tar.bz2 113874121 RMD160 245efc87416788f37b4b660153a53848308d822f SHA1 da62223757a8c61c8f0e895631bb6ff06beae229 SHA256 ca990057b54f43abe0647bbd1cc7f25945e97c86caee46310d2c3be95aa7dd53
+DIST qt-everywhere-opensource-src-4.6.0-rc1.tar.gz 153619571 RMD160 9ba13ba9aa99d3674b3bbc34601c7a34812c0701 SHA1 2fb07479c639fc2f98be0f9b65b0d179e4c637f7 SHA256 28649e0bd086783f3c960d9427298e1231c9eb44cb2c9ddad20cb3e60475c527
 DIST qt-mac-opensource-src-4.5.3.tar.gz 123311631 RMD160 290fecbe8698ead4f884617ae4dd20b37663545e SHA1 566a9c45b261447c07c784b9317c9b5aae1ccbd8 SHA256 1bca03b2355e686ae7184d98c4da1d60689732754407886cefff4288b28c6f34
-DIST qt-x11-opensource-src-4.4.2-headers.tar.bz2 2509611 RMD160 3424d4049f1c06959bd57a98e3933636515c60fa SHA1 f0945230b8856b446f03473c18474e9224b30fcf SHA256 aa02d9e2c017ff92d91ef73781d4d1a28be53136886ac99275df053fe31d1fff
-DIST qt-x11-opensource-src-4.4.2.tar.bz2 102816706 RMD160 5719ab5800ca181417e0dff7f961af7b371ddd97 SHA1 0bc56934565f529a2708533a4f160fbc87b9d9e0 SHA256 0530fefc452e5029877739164e133de7df5faa519b0fb3d9fcf40b467350c675
-DIST qt-x11-opensource-src-4.5.1.tar.bz2 114667436 RMD160 702d7c6bb9787cd5602dcb8afce52bdfcfd52179 SHA1 50ba9b6d2eb7056e47dc53775be509c4ff6ec015 SHA256 b994c40e41386c9d82f025dd9198e1161717021216680adef97da3f1b8947c75
-DIST qt-x11-opensource-src-4.5.2.tar.bz2 116015284 RMD160 1af31d7fe66665e718f0c728b41becea9996fba7 SHA1 bf2dd175cade15f3f505fe6aac1401bdbfeb4e5b SHA256 d26d94c9cb90dfe16a13b39ac7157f66ec9f5fbbf9d7faa57f7466157721f836
 DIST qt-x11-opensource-src-4.5.3.tar.gz 125384668 RMD160 93d765ecf89ed15668a4eedc7d77c2a2e41424a2 SHA1 78620ffd03c83c4d86f5039ccf7b09e5c709ed25 SHA256 0c87fc42825d3556970db4412257c6874e716ac3bc45e6f273924d5d6a089aa6
-EBUILD qt-script-4.4.2.ebuild 1202 RMD160 f36e874607c200e727453b9f8168fc3314d56e02 SHA1 121984b108c476adbb2ca7576e81ed8a8fc8c657 SHA256 7664013da83b081238b805a84d5945781a277c63789e644e8e7dbb6223132b09
-EBUILD qt-script-4.5.1.ebuild 1122 RMD160 848afb2678370a60586d7773a6e12799bd482967 SHA1 cc2c1169e4f9fe444245d656f4a333afc1a38fec SHA256 31b9363d8942339a6ff7c783eed156b53740a062fd142f1e7e4800532b97957c
-EBUILD qt-script-4.5.2.ebuild 1170 RMD160 8ace3959cd1c39d902f2eec84cacc0e144b2d1c7 SHA1 924196661c7563338e68fc5a191095dd91f499dc SHA256 4b7ab3fac6457af7e53100884fa0ae0d45e31634d38d67ca9bcbdd6794169cdc
 EBUILD qt-script-4.5.3-r1.ebuild 1215 RMD160 5be1cdb400895cd20e915dbb292895ff366217b0 SHA1 4cef5f7427b36efa568bc240cdcc34081deda628 SHA256 3138afc52d15e5ae32becd5368274a23460da345aefca57422142db49db04924
-EBUILD qt-script-4.5.3.ebuild 1168 RMD160 9992fd47a2d5c3bcdb11a8c281b191eab923746d SHA1 389a1feebb1a5c01b202088e7dcc07c6843c182b SHA256 71d65299657f67c36cdabf65f5793417bdc84534c9d22adaf99a79bd5dff6179
-EBUILD qt-script-4.6.0_beta1.ebuild 1163 RMD160 ba9059103b89b18c9e2ed632a12d0e413738cb17 SHA1 812144ccf7dfc6b27b95bae6328e7bee74f5b05b SHA256 501f1a6e661a15bce5bb75d67cf531048d6522981c38ebd5927206391042482d
-MISC ChangeLog 6709 RMD160 8727d2642ff3f9bed6ccb657668ba09cab06db73 SHA1 c20cb6350492467b7be808425d2cac103f78d1b7 SHA256 ace36b1c1f0a38b51b1d956237ad42f5f23a1186f903aae356e6e59766ded8f6
+EBUILD qt-script-4.6.0_rc1.ebuild 1161 RMD160 575851f08b8f59e1cb0e09967b94cf203f2447ee SHA1 5e3ba7150101afac26269aef3bd70f16b616a697 SHA256 ea1dc6d502917df65be29bb4088a6a7859818e9baa9f5108d9e913ae5b09a4d7
+MISC ChangeLog 6895 RMD160 d6c95d988a5f0712cb4937d37d590139dca9697f SHA1 ce537a2a9ab48203999f2233a951436b3d33cdc7 SHA256 4bd91737b8b1760d06a9e0cec6cf0a12005f32572697384572560d44361a1c99
 MISC metadata.xml 156 RMD160 d76590850d56864c8d99e6877ed15841b55ef1fc SHA1 e872bab086832a9db3f0fa9b1897c70577d3af21 SHA256 94c4f580c1a55f8a5e1a1dcdd6dedfea0b8bd78c1d7137c354938d73c49e4448
