@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-script/qt-script-4.5.1.ebuild,v 1.8 2009/06/30 15:02:41 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-script/qt-script-4.6.0_rc1.ebuild,v 1.1 2009/11/18 20:49:13 wired Exp $
 
 EAPI=2
 inherit qt4-build
@@ -8,7 +8,7 @@ inherit qt4-build
 DESCRIPTION="The ECMAScript module for the Qt toolkit"
 SLOT="4"
 KEYWORDS="~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris"
-IUSE="+iconv"
+IUSE="iconv"
 
 DEPEND="~x11-libs/qt-core-${PV}[debug=]"
 RDEPEND="${DEPEND}"
@@ -18,10 +18,12 @@ QT4_EXTRACT_DIRECTORIES="${QT4_TARGET_DIRECTORIES}
 include/Qt/
 include/QtCore/
 include/QtScript/
-src/corelib/"
+src/corelib/
+src/3rdparty/javascriptcore/
+"
 
 src_configure() {
-	myconf="${myconf} $(qt_use iconv) -no-xkb  -no-fontconfig -no-xrender -no-xrandr
+	myconf="${myconf} $(qt_use iconv) -script -no-xkb  -no-fontconfig -no-xrender -no-xrandr
 		-no-xfixes -no-xcursor -no-xinerama -no-xshape -no-sm -no-opengl
 		-no-nas-sound -no-dbus -no-cups -no-nis -no-gif -no-libpng
 		-no-libmng -no-libjpeg -no-openssl -system-zlib -no-webkit -no-phonon
